<resources>
    <string name="app_name">Dawen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading…</string>
    <string name="search_for_a_note">Search</string>
    <string name="type_something">Type Something....</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_message">Are you sure you want to delete %s note?</string>
    <string name="title_required">You can\'t create or edit note with empty title</string>
    <string name="start_to_add_notes">Start to add Notes</string>
    <string name="share_button">Share Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="back_button">Back Button</string>
    <string name="save_button">Save Button</string>
    <string name="image_which_represent_that_the_list_of_notes_is_empty">Image which represent that the list of notes is empty</string>
    <string name="app_logo_image">App Logo image</string>
    <string name="share_message">Title: %1$s\nDescription: %2$s</string>
</resources>