<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.notesList.NotesListFragment">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toBottomOf="@+id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo_image" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/appIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_note"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/transparent_btn"
        android:drawableTop="@drawable/ic_add"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/appName"
        app:layout_constraintVertical_bias="0.5" />


    <View
        android:id="@+id/horizontal_line"
        android:layout_width="370dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/note_item" />


    <LinearLayout
        android:id="@+id/empty_list_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/empty_notes"
            android:contentDescription="@string/image_which_represent_that_the_list_of_notes_is_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/start_to_add_notes"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>